fix: list overflow on mobile

--- a/src/components/presentational/HotelList/HotelList.css
+++ b/src/components/presentational/HotelList/HotelList.css
@@ -8,13 +8,13 @@
 
 .HotelList__Item {
   flex: 0 0 auto;
-  width: 98%;
+  width: 95%;
 }
 
 /* sm */
 @media screen and (min-width: 576px) {
   .HotelList__Item {
-    width: 45%;
+    width: 47%;
   }
 }
 
@@ -24,9 +24,6 @@
 
 /* lg */
 @media screen and (min-width: 992px) {
-  .HotelList__Item {
-    width: 45%;
-  }
 }
 
 /* xl */
